[build-system]
requires = [
    "setuptools >= 77.0.3",
    "setuptools_scm[toml] >= 6.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "arbtt-chart"
description = "Plot charts from arbtt-stats to terminal"
authors = [{name = "Tomáš Janoušek", email = "tomi@nomi.cz"}]
license = "MIT"
readme = {file="README.md", content-type="text/markdown"}
dynamic = ["version"]
classifiers = [ # https://pypi.org/classifiers/
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Utilities",
]
requires-python = ">= 3.10"
dependencies = [
    "pandas >= 1.5.3",
]

[dependency-groups]
dev = [
    "click >= 8.1.1",
    "flake8 >= 6.1",
    "isort >= 5.1",
    "mypy >= 1.0",
    "prysk >= 0.20.0",
    "pytest >= 7.0",
]

[project.urls]
"Homepage" = "https://github.com/liskin/arbtt-chart"
"Release Notes" = "https://github.com/liskin/arbtt-chart/releases"
"Issues" = "https://github.com/liskin/arbtt-chart/issues"
"CI" = "https://github.com/liskin/arbtt-chart/actions"
"Donations (GitHub)" = "https://github.com/sponsors/liskin"
"Donations (PayPal)" = "https://www.paypal.me/lisknisi/5EUR"

[project.scripts]
arbtt-chart = "arbtt_chart:main"

[tool.gha-check-distro]
dependencies-apt = [
    "jq",
    "just",
    "python3-click",
    "python3-flake8",
    "python3-isort",
    "python3-mypy",
    "python3-pandas",
    "python3-pip",
    "python3-pytest",
    "python3-rich",
    "python3-typeshed",
    "python3-venv",
]

[tool.setuptools_scm]

[tool.setuptools]
py-modules = ["arbtt_chart"]
# include-package-data = false

[tool.mypy]
python_executable = ".venv/bin/python3"
show_error_codes = true

[tool.isort]
profile = "open_stack"

[tool.ruff]
line-length = 120

# vim:set et:
