[metadata]
name = arbtt-chart
url = https://github.com/liskin/arbtt-chart

author = Tomáš Janoušek
author_email = tomi@nomi.cz
license = MIT

description = "Plot charts from arbtt-stats to terminal"
long_description = file: README.md
long_description_content_type = text/markdown

classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
py_modules = arbtt_chart
python_requires = ~= 3.7
install_requires =
    pandas
tests_require =

[options.extras_require]
dev =
    cram
    flake8
    isort
    mypy
    pep517
    python-language-server
    twine
test =
    pytest

[options.entry_points]
console_scripts =
    arbtt-chart = arbtt_chart:main

[mypy]
python_executable = .venv/bin/python3
show_error_codes = True

[flake8]
extend-exclude = .venv
max-line-length = 120
per-file-ignores =
    tests/test_bar.py:E202

# vim:set et:
