[metadata]
name = arbtt-chart
url = https://github.com/liskin/arbtt-chart

author = Tomáš Janoušek
author_email = tomi@nomi.cz
license = MIT

description = "Plot charts from arbtt-stats to terminal"
long_description = file: README.md
long_description_content_type = text/markdown

classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Utilities

[options]
py_modules = arbtt_chart
python_requires = ~= 3.7
install_requires =
    pandas >= 1.0.0
tests_require =

[options.extras_require]
dev =
    cram
    flake8 >= 3.7.0
    isort >= 5.0
    mypy >= 0.730
    pep517
    python-language-server
    twine
test =
    pytest

[options.entry_points]
console_scripts =
    arbtt-chart = arbtt_chart:main

[mypy]
python_executable = .venv/bin/python3
show_error_codes = True

[flake8]
extend-exclude = .venv
max-line-length = 120
per-file-ignores =
    tests/test_bar.py:E202

# vim:set et:
